Injeção de dependencia e mudanças na arquitetura